src/backend/api/Fusion.Resources.Api/Deployment/k8s/deployment-ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resources-api-fusion-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-fusiondev-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.org/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: ingress-nginx-fusiondev
  tls:
  - hosts:
    - fra-resources.api.fusion-dev.net
    secretName: fra-resources.api.fusion-dev.net-tls
  rules:
    - host: fra-resources.api.fusion-dev.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: resources-api
              port:
                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resources-api-fusion-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.org/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: ingress-nginx-equinor
  tls:
  - hosts:
    - fra-resources.api.fusion.equinor.com
    secretName: wildcard-tls-cert
  rules:
    - host: fra-resources.api.fusion.equinor.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: resources-api
              port:
                number: 80
